--- a/styles/form.css
+++ b/styles/form.css
@@ -66,3 +66,8 @@ form button:hover {
   background: var(--brand-primary, #9705EA);
   box-shadow: 0px 0px 32px 0px #9705EA;
 }
+
+button.button-reset {
+  all: unset;
+  display: flex;
+}
